pequeno paragrafo adicionado

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, labore nostrum laudantium rem quidem animi distinctio delectus esse laboriosam aliquid, a rerum error sunt, modi molestias quaerat doloribus consequuntur possimus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto dignissimos et harum maxime veritatis, quas eveniet eos facere illum accusamus exercitationem, qui odit. Excepturi, quo voluptas? Deleniti commodi sequi totam.</p>
 </body>
 </html>
